fixes for silver x86/linux

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,4 +58,4 @@ if(SYLVAN_STATS)
 endif()
 
 install(TARGETS sylvan DESTINATION "${CMAKE_INSTALL_LIBDIR}")
-install(FILES ${HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+install(FILES ${HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/sylvan")
